--- a/css/general.css
+++ b/css/general.css
@@ -11,7 +11,7 @@
 
 html {
   font-size: 62.5%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
@@ -28,7 +28,7 @@ body {
 .container {
   max-width: 120rem;
   margin: 0 auto;
-  padding: 0 2rem;
+  padding: 0 3.2rem;
 }
 
 .grid {
@@ -84,39 +84,39 @@ body {
 }
 
 .subheading {
-    display: block;
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: #cf711f;
-    text-transform: uppercase;
-    margin-bottom: 1.6rem;
-    letter-spacing: 0.75px;
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #cf711f;
+  text-transform: uppercase;
+  margin-bottom: 1.6rem;
+  letter-spacing: 0.75px;
 }
 
 .btn,
 .btn:link,
-.btn:visited{
-    display: inline-block;
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1.6rem 3.2rem;
-    border-radius: 0.56rem;
-    border: none;
-    cursor: pointer;
-    font-family: inherit;
-    transition: all 0.3s;
+.btn:visited {
+  display: inline-block;
+  text-decoration: none;
+  font-size: 2rem;
+  font-weight: 600;
+  padding: 1.6rem 3.2rem;
+  border-radius: 0.56rem;
+  border: none;
+  cursor: pointer;
+  font-family: inherit;
+  transition: all 0.3s;
 }
 
 .btn--full:link,
-.btn--full:visited{
-    background-color: #e67e22;
-    color: #fff;
+.btn--full:visited {
+  background-color: #e67e22;
+  color: #fff;
 }
 
 .btn--full:hover,
-.btn--full:active{
-    background-color: #cf711f;
+.btn--full:active {
+  background-color: #cf711f;
 }
 
 .btn--outline:link,
@@ -126,7 +126,7 @@ body {
 }
 
 .btn--outline:hover,
-.btn--outline:active{
-    background-color: #fdf2e9;
-    box-shadow: inset 0 0 0 3px #fff;
+.btn--outline:active {
+  background-color: #fdf2e9;
+  box-shadow: inset 0 0 0 3px #fff;
 }
