--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,6 @@ header {
   justify-content: space-between;
   align-items: center;
   background-color: #fdf2e9;
-
   height: 9.6rem;
   padding: 0 4.8rem;
   position: relative;
@@ -40,14 +39,14 @@ header {
 
 .main-nav-list:hover,
 .main-nav-list:active {
-  color: #f26a2e;
+  color: #cf711f;
 }
 
 .main-nav-list.nav-cta:link,
 .main-nav-list.nav-cta:visited {
   padding: 1.2rem 2.4rem;
   border-radius: 0.56rem;
-  background-color: #f26a2e;
+  background-color: #e67e22;
   color: #fff;
 }
 
