--- a/css/qeuires.css
+++ b/css/qeuires.css
@@ -1,5 +1,5 @@
 /************************/
-/* BELOW 1344px (Smaller desktops) */
+/* BELOW 1344px */
 /************************/
 /* 1344/16 = 84em */
 @media (max-width: 84em) {
@@ -17,7 +17,7 @@
 }
 
 /************************/
-/* BELOW 1200px (Landscpe Table) */
+/* BELOW 1200px */
 /************************/
 /* 1200/16 = 75em */
 @media (max-width: 75em) {
@@ -86,6 +86,34 @@
 
   .logos img{
     height: 2.4rem;
+  }
+
+  .step-number{
+    font-size: 7.4rem;
+  }
+
+  .meal-content{
+    padding: 2.4rem 3.2rem 3,2rem 3.2rem;
+  }
+
+  .section-testimonials{
+    padding: 6.4rem 3.2rem;
+  }
+
+  .gallery{
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .cta{
+   grid-template-columns: 3fr 2fr;
+  }
+
+  .cta-form {
+    grid-template-columns: 1fr;
+  }
+
+  .btn-form {
+    margin-top: 1.2rem;
   }
 
   /* MOBLIE NAVIGATION*/
