--- a/css/style.css
+++ b/css/style.css
@@ -152,3 +152,50 @@ header {
   color: #cf711f;
   font-weight: 700;
 }
+
+/************************/
+/* FEATURED IN SECTION */
+/************************/
+.section-featured {
+  padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in{
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.047rem;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.5rem;
+  color: #888;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+
+.logos img{
+  height: 3.2rem;
+  filter: brightness(0);
+  opacity: 50%;
+}
+
+/************************/
+/* HOW IT WORKS SECTION */
+/************************/
+.section-how{
+  padding: 9.6rem 0;
+}
+
+.step-number{
+  font-size: 8.6rem;
+  font-weight: 600;
+  color: #ddd;
+  margin-bottom: 1.2rem;
+}
+
+.step-description{
+  font-size: 1.8rem;
+  line-height: 1.8;
+}
