--- a/css/qeuires.css
+++ b/css/qeuires.css
@@ -56,7 +56,7 @@
 }
 
 /************************/
-/* BELOW 944px (Tablets) */
+/* BELOW 944px */
 /************************/
 /* 944/16 = 59em */
 @media (max-width: 59em) {
@@ -93,7 +93,7 @@
   }
 
   .meal-content{
-    padding: 2.4rem 3.2rem 3,2rem 3.2rem;
+    padding: 2.4rem 3.2rem 3.2rem 3.2rem;
   }
 
   .section-testimonials{
@@ -101,7 +101,7 @@
   }
 
   .gallery{
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(6,1fr);
   }
 
   .cta{
