--- a/css/general.css
+++ b/css/general.css
@@ -130,3 +130,20 @@ body {
   background-color: #fdf2e9;
   box-shadow: inset 0 0 0 3px #fff;
 }
+
+/* HELPERS/SETTING CLASS */
+.margin-rigth-sm{
+  margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md{
+  margin-bottom: 4.8rem !important;
+}
+
+.center-text{
+  text-align: center;
+}
+
+strong{
+  font-weight: 500;
+}
