--- a/css/style.css
+++ b/css/style.css
@@ -235,3 +235,20 @@ header {
 .step-img {
   width: 35%;
 }
+
+/************************/
+/* MEALS SECTION */
+/************************/
+
+.section-meals{
+  padding: 9.6rem 0;
+}
+
+.meals{
+  box-shadow: 0 2.4rem 4.8rem #00000013;
+  border-radius: 0.69rem;
+  overflow: hidden;
+  transition: all 0.4s;
+}
+
+
