--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 /* HEADER */
 /************************/
 
-header {
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
